--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://yektaulas.github.io/my_personal_website",
+  "homepage": "http://yektaulas.github.io/mypersonalsite",
   "name": "personal_website",
   "version": "0.1.0",
   "private": true,
